--- a/stvsystem/stvsystem/Views/Candidate/DeleteConfirmation.cshtml
+++ b/stvsystem/stvsystem/Views/Candidate/DeleteConfirmation.cshtml
@@ -13,59 +13,59 @@
             <div class="col-12 col-md-12">
                 <div class="card">
                     <div class="card-body">
-                        <div class="h1 text-muted text-left mb-4">
+                        <div class="h2 text-muted text-left mb-1">
                             <i class="icon icon-user-following"></i>
                         </div>
-                        <div class="h4 mb-0">
+                        <div class="h4 mb-0 text-primary">
                             @Html.DisplayFor(model => model.FirstName)
                             @Html.DisplayFor(model => model.MiddleName)
                             @Html.DisplayFor(model => model.LastName)
                         </div>
-                        <small class="text-muted text-uppercase font-weight-bold">Թեկնածու</small>
+                        <small class="text-muted">Թեկնածու</small>
                     </div>
                 </div>
             </div>
             <div class="col-6 col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <div class="h1 text-muted text-left mb-4">
+                        <div class="h2 text-muted text-left mb-1">
                             <i class="icon-calendar"></i>
                         </div>
-                        <div class="h4 mb-0">@Html.DisplayFor(model => model.BirthDate)</div>
-                        <small class="text-muted text-uppercase font-weight-bold">@Html.LabelFor(model => model.BirthDate)</small>
+                        <div class="h5 text-primary mb-0">@Html.DisplayFor(model => model.BirthDate)</div>
+                        <small class="text-muted">@Html.LabelFor(model => model.BirthDate)</small>
                     </div>
                 </div>
             </div>
             <div class="col-6 col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <div class="h1 text-muted text-left mb-4">
+                        <div class="h2 text-muted text-left mb-1">
                             <i class="fa fa-intersex"></i>
                         </div>
-                        <div class="h4 mb-0">@Html.DisplayFor(model => model.GenderName)</div>
-                        <small class="text-muted text-uppercase font-weight-bold">@Html.LabelFor(model => model.GenderName)</small>
+                        <div class="h5 text-primary mb-0">@Html.DisplayFor(model => model.GenderName)</div>
+                        <small class="text-muted">@Html.LabelFor(model => model.GenderName)</small>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-12">
                 <div class="card">
                     <div class="card-body">
-                        <div class="h1 text-muted text-left mb-4">
+                        <div class="h2 text-muted text-left mb-1">
                             <i class="fa fa-legal"></i>
                         </div>
-                        <div class="h4 mb-0">@Html.DisplayFor(model => model.CourtName)</div>
-                        <small class="text-muted text-uppercase font-weight-bold">@Html.LabelFor(model => model.CourtName)</small>
+                        <div class="h5  text-primary mb-0">@Html.DisplayFor(model => model.CourtName)</div>
+                        <small class="text-muted">@Html.LabelFor(model => model.CourtName)</small>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-12">
                 <div class="card">
                     <div class="card-body">
-                        <div class="h1 text-muted text-left mb-4">
+                        <div class="h2 text-muted text-left mb-1">
                             <i class="fa fa-mortar-board"></i>
                         </div>
-                        <div class="h4 mb-0">@Html.DisplayFor(model => model.SpecializationName)</div>
-                        <small class="text-muted text-uppercase font-weight-bold">@Html.LabelFor(model => model.SpecializationName)</small>
+                        <div class="h5 text-primary mb-0">@Html.DisplayFor(model => model.SpecializationName)</div>
+                        <small class="text-muted">@Html.LabelFor(model => model.SpecializationName)</small>
                     </div>
                 </div>
             </div>
