--- a/stvsystem/stvsystem/Views/Court/Template.cshtml
+++ b/stvsystem/stvsystem/Views/Court/Template.cshtml
@@ -31,8 +31,8 @@
             
             </div>
             <div class="card-footer">
-                <button type="submit" id="btnSave" class="btn btn-sm btn-primary"><i class="icons icon-check"></i>&nbsp;Հիշել</button>
-                <button type="button" class="btn btn-sm btn-secondary" onclick="location.href='@Url.Action("Index", "Court")'"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
+                <button type="submit" id="btnSave" class="btn btn-primary"><i class="icons icon-check"></i>&nbsp;Հիշել</button>
+                <button type="button" class="btn btn-secondary" onclick="location.href='@Url.Action("Index", "Court")'"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
                 @Html.ValidationSummary("Առկա են խնդիրներ")
             </div>
         </div>
