--- a/stvsystem/stvsystem/Views/Judge/Index.cshtml
+++ b/stvsystem/stvsystem/Views/Judge/Index.cshtml
@@ -70,9 +70,6 @@
         var dataItem = grid.dataItem(row);
         window.location = '@Url.Action("DeleteConfirmation", "Judge")/?judgeID=' + dataItem.JudgeID;
     }
-
-
-   
 </script>
 
 @(Html.Kendo().Grid<stvsystem.Data.JudgeItem>()
@@ -80,12 +77,10 @@
           .NoRecords(n => n.TemplateId("no-records-template-id"))
           .Columns(columns =>
           {
-              columns.Bound(c => c.FirstName).Width(120);
-              columns.Bound(c => c.LastName);
-              //columns.Bound(c => c.GenderName).MinScreenWidth(768).HtmlAttributes(new { style = "text-align:center" });
-              columns.Bound(c => c.GenderName);
+              columns.Bound(c => c.JudgeName).Width(360);
+              columns.Bound(c => c.GenderName).Width(100).HtmlAttributes(new { style = "text-align: center" });
               columns.Bound(c => c.CourtName);
-              columns.Bound(c => c.SpecializationName);
+              columns.Bound(c => c.SpecializationName).Width(250);
               columns.Command(commands =>
               {
                   commands.Custom("cmdUpdateJudge").Text(" ").Click("UpdateJudge").HtmlAttributes(new { @class = "Update_Icon" });
@@ -97,15 +92,12 @@
           .Resizable(resize => resize.Columns(true))
           .Scrollable()
           .Reorderable(reorder => reorder.Columns(true))
-          //.Pageable(pager => pager.PageSizes(new[] { 10, 15, 25, 50, 100 }))
           .DataSource(dataSource => dataSource
               .Ajax()
               .Events(events => events.Error("error_handler"))
               .Read(read => read.Action("FilterJudge", "Judge").Data("getParameters"))
           )
 )
-
-
 
 <script id="no-records-template-id" type="text/x-kendo-template">
     <div class="k-grid-norecords-template">Գրառումներ առկա չեն</div>
