--- a/stvsystem/stvsystem/Views/Setting/Delete.cshtml
+++ b/stvsystem/stvsystem/Views/Setting/Delete.cshtml
@@ -22,7 +22,7 @@
                             <div class="card-body p-0 clearfix">
                                 <i class="icon icon-check bg-primary p-4 font-2xl mr-3 float-left"></i>
                                 <div class="h5 text-info mb-0 pt-3">@Html.DisplayFor(model => model.SelectionName)</div>
-                                <div class="text-muted text-uppercase font-weight-bold font-xs">@Html.LabelFor(model => model.SelectionName)</div>
+                                <div class="text-muted font-xs">@Html.LabelFor(model => model.SelectionName)</div>
                             </div>
                         </div>
                     </div>
@@ -31,51 +31,51 @@
                             <div class="card-body p-0 clearfix">
                                 <i class="icon icon-calendar bg-primary p-4 font-2xl mr-3 float-left"></i>
                                 <div class="h5 text-info mb-0 pt-3">@Html.DisplayFor(model => model.SelectionDate)</div>
-                                <div class="text-muted text-uppercase font-weight-bold font-xs">@Html.LabelFor(model => model.SelectionDate)</div>
+                                <div class="text-muted font-xs">@Html.LabelFor(model => model.SelectionDate)</div>
                             </div>
                         </div>
                     </div>
                     <div class="col-6 col-md-6">
                         <div class="card">
                             <div class="card-body">
-                                <div class="h1 text-muted text-right mb-4">
+                                <div class="h1 text-muted text-right mb-1">
                                     <i class="icon-clock"></i>
                                 </div>
-                                <div class="h4 mb-0">@Html.DisplayFor(model => model.StartTime)</div>
-                                <small class="text-muted text-uppercase font-weight-bold">@Html.LabelFor(model => model.StartTime)</small>
+                                <div class="h4 text-info mb-0">@Html.DisplayFor(model => model.StartTime)</div>
+                                <small class="text-muted">@Html.LabelFor(model => model.StartTime)</small>
                             </div>
                         </div>
                     </div>
                     <div class="col-6 col-md-6">
                         <div class="card">
                             <div class="card-body">
-                                <div class="h1 text-muted text-right mb-4">
+                                <div class="h1 text-muted text-right mb-1">
                                     <i class="icon-clock"></i>
                                 </div>
-                                <div class="h4 mb-0">@Html.DisplayFor(model => model.FinishTime)</div>
-                                <small class="text-muted text-uppercase font-weight-bold">@Html.LabelFor(model => model.FinishTime)</small>
+                                <div class="h4 text-info mb-0">@Html.DisplayFor(model => model.FinishTime)</div>
+                                <small class="text-muted">@Html.LabelFor(model => model.FinishTime)</small>
                             </div>
                         </div>
                     </div>
                     <div class="col-6 col-md-6">
                         <div class="card">
                             <div class="card-body">
-                                <div class="h1 text-muted text-right mb-4">
+                                <div class="h1 text-muted text-right mb-1">
                                     <i class="icon icon-user-following"></i>
                                 </div>
-                                <div class="h4 mb-0">@Html.DisplayFor(model => model.SelectionCount)</div>
-                                <small class="text-muted text-uppercase font-weight-bold">@Html.LabelFor(model => model.SelectionCount)</small>
+                                <div class="h4 text-info mb-0">@Html.DisplayFor(model => model.SelectionCount)</div>
+                                <small class="text-muted">@Html.LabelFor(model => model.SelectionCount)</small>
                             </div>
                         </div>
                     </div>
                     <div class="col-6 col-md-6">
                         <div class="card">
                             <div class="card-body">
-                                <div class="h1 text-muted text-right mb-4">
+                                <div class="h1 text-muted text-right mb-1">
                                     <i class="icon icon-people"></i>
                                 </div>
-                                <div class="h4 mb-0">@Html.DisplayFor(model => model.ParticipantCount)</div>
-                                <small class="text-muted text-uppercase font-weight-bold">@Html.LabelFor(model => model.ParticipantCount)</small>
+                                <div class="h4 text-info mb-0">@Html.DisplayFor(model => model.ParticipantCount)</div>
+                                <small class="text-muted">@Html.LabelFor(model => model.ParticipantCount)</small>
                             </div>
                         </div>
                     </div>
