--- a/stvsystem/stvsystem/Views/Credential/Detail.cshtml
+++ b/stvsystem/stvsystem/Views/Credential/Detail.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<stvsystem.Data.CredentialItem>
 @{
     Layout = "~/Views/Shared/_LayoutNull.cshtml";
-    ViewData["Title"] = "Տպել";
+    ViewData["Title"] = "Արտահանել";
 }
 
 <div id="Credentials">
