--- a/stvsystem/stvsystem/Views/Shared/_LayoutNull.cshtml
+++ b/stvsystem/stvsystem/Views/Shared/_LayoutNull.cshtml
@@ -16,9 +16,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
     </environment>
     <environment include="Staging,Production">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+        <link rel="stylesheet" href="~/css/bootstrap.min.css" />
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous" asp-fallback-src="~/lib/jquery/dist/jquery.min.js"></script>
     </environment>
