--- a/stvsystem/stvsystem/Views/Selection/ConfirmSelection.cshtml
+++ b/stvsystem/stvsystem/Views/Selection/ConfirmSelection.cshtml
@@ -33,8 +33,12 @@
             </div>
 
             <div class="col-lg-12 align-right">
-                <button type="submit" id="SubmitButton" class="btn btn-primary"><i class="icons icon-check"></i>&nbsp;Ավարտել</button>
-                <button type="button" onclick="location.href='@Url.Action("Index", "Selection")'" class="btn btn-secondary"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
+                <button type="submit" id="submitButton" name="submitButton" value="Confirm" class="btn btn-primary"><i class="icons icon-check"></i>&nbsp;Ավարտել</button>
+                <button type="submit" id="submitButton" name="submitButton" value="Cancel" class="btn btn-success"><i class="icons icon-check"></i>&nbsp;Չեղարկել</button>
+
+                @*<button type="button" onclick="location.href='@Url.Action("Index", "Selection")'" class="btn btn-secondary"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>*@
+
+
                 @Html.ValidationSummary("Առկա են խնդիրներ")
             </div>
         </div>
